--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,13 @@
 @tailwind utilities;
 
 :root {
-    font-family: "Urbanist", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
 
-    color: rgba(0, 0, 0, 1);
+    color: white;
+    background-color: black;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -30,30 +31,37 @@
     flex-direction: row-reverse;
     gap: 15px;
 }
+
 .productCarousel.carousel-root .carousel {
     width: auto;
 }
+
 .productCarousel.carousel-root .carousel.carousel-slider {
     width: 100%;
 }
+
 .productCarousel.carousel-root .carousel.carousel-slider .slider-wrapper {
     border-radius: 10px;
 }
+
 .productCarousel.carousel-root .carousel .thumbs-wrapper {
     margin: 0;
 }
+
 .productCarousel.carousel-root .carousel .thumb {
     height: 60px;
     border-radius: 6px;
     overflow: hidden;
     position: relative;
 }
+
 .productCarousel.carousel-root .carousel .thumb img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
 }
+
 .productCarousel.carousel-root .carousel .thumb:after {
     content: "";
     width: 100%;
@@ -64,26 +72,32 @@
     background-color: black;
     opacity: 0;
 }
+
 .productCarousel.carousel-root .carousel .thumb.selected,
 .productCarousel.carousel-root .carousel .thumb:hover {
     border: 0;
 }
+
 .productCarousel.carousel-root .carousel .thumb:hover:after,
 .productCarousel.carousel-root .carousel .thumb.selected:after {
     opacity: 0.2;
 }
+
 .productCarousel .control-arrow {
     display: none;
 }
+
 @media screen and (max-width: 767px) {
     .productCarousel.carousel-root {
         flex-direction: column;
     }
+
     .productCarousel.carousel-root .carousel .thumb {
         border: 0;
         padding: 0;
     }
 }
+
 @media screen and (min-width: 768px) {
     .productCarousel.carousel-root .carousel .thumbs {
         transform: none !important;
@@ -91,12 +105,14 @@
         display: flex;
         gap: 10px;
     }
+
     .productCarousel.carousel-root .carousel .thumb {
         border: 0;
         padding: 0;
         margin: 0;
     }
 }
+
 /* PRODUCT DETAILS CAROUSEL STYLING CUSTOMIZATION END */
 
 .markdown ul {
@@ -105,6 +121,7 @@
     list-style-type: disc;
     margin: 20px 0;
 }
+
 .markdown ul li {
     margin: 10px 0;
 }
